--- a/docs/fr/modules/main/functions/Echo.tex
+++ b/docs/fr/modules/main/functions/Echo.tex
@@ -188,7 +188,7 @@
         \hline
         \textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
         \hline
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR\_TXT\_...} & \textbf{\color{path}Colors.conf}\\
         \hline
     \end{tabular}
 
@@ -216,12 +216,6 @@
 
 \begin{justify}
     \textbf{Description :}
-\end{justify}
-
-\setlength{\parskip}{1em}
-
-\begin{justify}
-    Chacune des variables globales de couleur de texte commençant par ce nom retourne le résultat de la fonction \textbf{\color{func}BU::Main::ModConfig::Colors::SetTextColor} lors de l'appel d'une de ces variables, pour colorer le texte selon le code couleur.
 \end{justify}
 
 \textbf{Fichier de définition : \color{path}Colors.conf}\\[1\baselineskip]
