--- a/docs/fr/modules/01) Config/main/Status-conf.tex
+++ b/docs/fr/modules/01) Config/main/Status-conf.tex
@@ -38,7 +38,7 @@
 \pagecolor{back}
 \title{\color{sec1}Variables du fichier de configuration \color{path}Status.conf}\color{text}
 \author{Dimitri OBEID}
-\date{2021}
+\date{2022}
 \pagestyle{fancy}
 
 \pdfinfo{
@@ -65,7 +65,11 @@
 \section{Présentation}\color{text}
 
 \begin{justify}
-    Ce fichier de configurations liste chaque variable globale de statut utilisée par la librairie, avec leurs valeurs par défaut, qui sont chargées en mémoire lors de l'inclusion du fichier \textbf{\color{path}Initialization.sh} appartenant au module principal.
+    Ce fichier de configurations liste chaque variable globale de statut utilisée par la librairie, avec sa ou ses valeurs par défaut.
+\end{justify}
+
+\begin{justify}
+    Elles sont chargées en mémoire lors de l'inclusion du fichier \textbf{\color{path}Initialization.sh} appartenant au module principal.
 \end{justify}
 
 % ----------------------
