Moved the library documentation files into a new folder

--- a/docs/fr/modules/02) Config/main/Colors-conf.tex
+++ b/docs/fr/modules/02) Config/main/Colors-conf.tex
@@ -90,7 +90,7 @@
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent (dossier des configurations)}    & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent} - \textit{dossier des configurations}    & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT}      & \textbf{\color{path}Status.conf}\\
         \hline
@@ -99,7 +99,7 @@
 
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent (dossier de la librairie)}       & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent} - \textit{dossier de la librairie}       & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH}    & \textbf{\color{path}Status.lib}\\
         \hline
