--- a/docs/fr/modules/02) Config/main/Text-conf.tex
+++ b/docs/fr/modules/02) Config/main/Text-conf.tex
@@ -90,7 +90,7 @@
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent (gestionnaire de modules)} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent} - \textit{gestionnaire de modules} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT} & \textbf{\color{path}Status.conf}\\
         \hline
