--- a/docs/fr/modules/04) Main/main/functions/Status.tex
+++ b/docs/fr/modules/04) Main/main/functions/Status.tex
@@ -88,15 +88,22 @@
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent (dossier de la librairie)} & \textbf{Nom du fichier}\\
-        \hline
-        \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Checkings.lib}\\
+        \textbf{Dossier parent} - \textit{dossier des configurations} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}    & \textbf{\color{lime}Colors.conf}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}    & \textbf{\color{lime}Status.conf}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}    & \textbf{\color{lime}Text.conf}\\
+        \hline
+    \end{tabular}
+
+
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{Dossier parent} - \textit{dossier de la librairie} & \textbf{Nom du fichier}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Checkings.lib}\\
         \hline
     \end{tabular}
 \end{justify}
