--- a/docs/fr/modules/04) Main/main/functions/Echo.tex
+++ b/docs/fr/modules/04) Main/main/functions/Echo.tex
@@ -88,7 +88,7 @@
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent (gestionnaire de modules)} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent} - \textit{gestionnaire de modules} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_INSTALL\color{path}/}                           & \textbf{\color{path}Bash-utils-init.sh}\\
         \hline
@@ -96,7 +96,7 @@
 
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent (dossier des configurations)} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent} - \textit{dossier des configurations} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{path}/config/modules/main}    & \textbf{\color{path}Colors.conf}\\
         \hline
@@ -108,7 +108,7 @@
 
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent (dossier de la librairie)} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent} - \textit{dossier de la librairie} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Checkings.lib}\\
         \hline
