--- a/docs/fr/modules/02) Config/main/Status-conf.tex
+++ b/docs/fr/modules/02) Config/main/Status-conf.tex
@@ -7,7 +7,7 @@
 
 \usepackage{fancyhdr}           % Ajout de headers et footers à chaque page du document.
 \usepackage{hyperref}           % Création de liens cliquables pointant vers d'autres parties du document.
-\usepackage{parskip}
+\usepackage{parskip}            % Sauts de ligne déterminables entre chaque paragraphe.
 
 % Ne pas oublier de modifier l'option "svgnames" (couleurs définies sur le modèle RGB, meilleur pour l'affichage numérique)
 % en option "dvipsnames" (basé sur le modèle CMYK, meilleur pour l'impression) via le script de conversion en format imprimable.
