--- a/docs/fr/Test.tex
+++ b/docs/fr/Test.tex
@@ -15,7 +15,7 @@
 \usepackage{verbatim}						% Mise en page des paragraphes.
 
 \usepackage[document]{ragged2e}								% Justification du texte.
-\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.
+\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.<
 
 \fontfamily{Roboto}
 
