--- a/docs/fr/modules/04) Functions/main/Echo.tex
+++ b/docs/fr/modules/04) Functions/main/Echo.tex
@@ -145,7 +145,7 @@
         \hline
         \textbf{\color{func}BU::IsInt}                                     & \textbf{\color{path}Checkings.lib}\\
         \hline
-        \textbf{\color{func}BU::Main::Checkings::CheckEcho}                & \textbf{\color{path}Checkings.lib}\\
+        \textbf{\color{func}BU::Main::Status::CheckStatIsBackupEchoing}                & \textbf{\color{path}Checkings.lib}\\
         \hline
         \textbf{\color{func}BU::CheckProjectLogStatus}                     & \textbf{\color{path}Checkings.lib}\\
         \hline
