Recreating the lang.csv file

--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -1,1 +1,52 @@
-VARIABLE,COMMENTS,MESSAGE,en,fr
+VARIABLE,COMMENTS,en,fr
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__Z,This variable stores the returned message if an argument value is empty,THE %s FUNCTION %s PARAMETER'S HAS NO VALUE,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__ALPHACHAR,This variable stores the returned message if the argument's value is not an alphabetic character,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHABETIC CHARACTER,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__ALPHASTR,This variable stores the returned message if the argument's value is not an alphabetic string,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHABETIC STRING,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__ALPHASTRCHAR,This variable stores the returned message if the argument's value is not an alphabetic string OR character,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHABETIC STRING OR CHARACTER,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__ALPHANUMCHAR,This variable stores the returned message if the argument's value is not an alphanumeric character,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHANUMERIC CHARACTER,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__ALPHANUMSTR,This variable stores the returned message if the argument's value is not an alphanumeric string,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHANUMERIC STRING,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__ALPHANUMSTRCHAR,This variable stores the returned message if the argument's value is not an alphanumeric string OR character,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN ALPHANUMERIC STRING OR CHARACTER,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__D,This variable stores the returned message if the argument's value is not a valid directory path,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A VALID DIRECTORY PATH,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__DF,This variable stores the returned message if the argument's value is not a valid directory OR file path,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A VALID DIRECTORY OR FILE PATH,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__F,This variable stores the returned message if the argument's value is not a valid file path,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A VALID FILE PATH,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__FLOAT,This variable stores the returned message if the argument's value is not a floating number,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A FLOAT,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__FLOATNEG,This variable stores the returned message if the argument's value is not a negative floating number,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A NEGATIVE FLOAT,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__FLOATPOS,This variable stores the returned message if the argument's value is not a positive floating number,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A POSITIVE FLOAT,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__INT,This variable stores the returned message if the argument's value is not an integer,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT AN INTEGER,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__INTNEG,This variable stores the returned message if the argument's value is not a negative integer,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A NEGATIVE INTEGER,
+__BU_MAIN_ARGS__PRINT_BAD_OPTION__INTPOS,This variable stores the returned message if the argument's value is not a positive integer,THE %s FUNCTION %s PARAMETER'S VALUE IS NOT A POSITIVE INTEGER,
+,,,
+__BU_MAIN_ARGS__GET_FUNC_ARGS_ARRAY_VALUES__VALUE_STORED,This variable stores the string tthat precedes the whole list of values stored in the array to process,Values stored in the %s function's array of arguments :,
+__BU_MAIN_ARGS__GET_FUNC_ARGS_ARRAY_VALUES__VALUE,This variable stores the string that precedes the value stored in the currently processed array's index,Value,
+,,,
+__BU_MAIN_ARGS__GET_FILE_NAME__MISSING_VAL_STR,This variable stores the message that indicates that the path of the file to be obtained was not found,« no file identified »,
+,,,
+__BU_MAIN_ARGS__GET_FUNCTION_NAME__MISSING_VAL_STR,This variable stores the message that indicates that the function to be obtained was not found,« no functiion identified »	,
+,,,
+__BU_MAIN_ARGS__GET_LINE_NUMBER__MISSING_VAL_STR,This variable stores the message that indicates that the line number to be obtained was not found,« no line identified »,
+,,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+__BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,,,
+,COMMENTS,,
+,COMMENTS,,
