--- a/lib/lang/lang.csv
+++ b/lib/lang/lang.csv
@@ -40,13 +40,36 @@ __BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
 __BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
 __BU_MAIN_ARGS__GET_FFL__,This variable stores the message that ,,
 ,,,
+__BU_MAIN_ARGS__PRINT_FFL__MSG,"This variable stores the message that gives the file, the function and the line where something happened","%s file, function %s, line %s",
 ,,,
+__BU_MAIN_ARGS__PRINT_FFL_ERROR_OCCURED__MSG,This variable stores the message that gives the location of an error for the arguments controller functions,"The error occured in the %s file, at function %s, on line %s, during the checking of the %s function",
 ,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_ONE_ARG,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_ONE_ARG__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_MULTIPLE_ARGS,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_NEEDS_MULTIPLE_ARGS__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_NOT_ENOUGH_ARGS__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_HAS_TOO_MUCH_ARGS__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_PARAM_VAL_NOT_POS_INT,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_PARAM_VAL_NOT_POS_INT__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_NOT_POS_INT,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_NOT_POS_INT__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_NOT_POS_INT__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_EMPTY,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_ARGC_EMPTY__ADVICE,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_EMPTY,,,
+__BU_MAIN_ARGS__ARGC__FUNCTION_AWAITED_ARGC_EMPTY__ADVICE,,,
 ,,,
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_PARENT__Z,,,
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_CHILD__Z,,,
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_TYPE__Z,,,
+__BU_MAIN_ARGS__CHECKINGS__CheckProjectRelatedFile__P_TYPE__DF,,,
 ,,,
+__BU_MAIN_ARGS__CMDS__GetCommandPath__P_CMD__Z,,,
 ,,,
-,,,
-,,,
-,,,
-,COMMENTS,,
-,COMMENTS,,
+__BU_MAIN_ARGS__DECHO__Decho__P_STRING__Z,,,
+__BU_MAIN_ARGS__DECHO__Decho__P_NEW_BG_COLOR__INTPOS,,,
+__BU_MAIN_ARGS__DECHO__Decho__P_NEW_TEXT_COLOR__INTPOS,,,
